--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>
     </nav>
   </div>
-  <img src="your_picture.jpg" alt="Profile Picture" />
+  <img src="guglielmo_picture.jpg" alt="Profile Picture" />
 </header>
 
 <section class="bio">
