--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
 
 <header>
   <div>
-    <h1>Your Name</h1>
-    <p>your.email@example.com</p>
+    <h1>Guglielmo Montone</h1>
+    <p>montone.guglielmo@gmail.com</p>
     <nav>
-      <a href="CV.pdf" target="_blank">CV</a>
-      <a href="https://scholar.google.com" target="_blank">Google Scholar</a>
-      <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>
+      <a href="CV.pdf" target="CvMontoneGuglielmo2025.pdf">CV</a>
+      <a href="https://scholar.google.com" target="https://scholar.google.com/citations?user=kD51fXUAAAAJ&hl=en&authuser=1&oi=sra">Google Scholar</a>
+      <a href="https://www.linkedin.com" target="https://www.linkedin.com/in/guglielmo-montone-5369aa162/">LinkedIn</a>
     </nav>
   </div>
   <img src="guglielmo_picture.jpg" alt="Profile Picture" />
