--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       justify-content: space-between;
       align-items: center;
       padding: 20px 0;
-      border-bottom: 1px solid #ddd;
+      border-bottom: 1px solid #007acc;
     }
     header img {
       width: 120px;
@@ -57,6 +57,64 @@
       color: #007acc;
       text-decoration: none;
       font-weight: bold;
+    }
+    /* Small gallery section */
+    .gallery-section {
+      margin-top: 40px;
+    }
+    .gallery-section p {
+      max-width: 700px;
+      line-height: 1.5;
+    }
+
+    .thumb-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+      gap: 15px;
+      margin-top: 20px;
+    }
+    .thumb-grid img {
+      width: 100%;
+      height: 120px;
+      object-fit: cover;
+      border-radius: 8px;
+      cursor: pointer;
+      border: 1px solid #ccc;
+      transition: transform 0.2s ease;
+    }
+    .thumb-grid img:hover {
+      transform: scale(1.03);
+    }
+    /* Lightbox */
+    .lightbox {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.8);
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
+    }
+    .lightbox img {
+      max-width: 80%;
+      max-height: 80%;
+      border-radius: 10px;
+      box-shadow: 0 0 20px rgba(255, 255, 255, 0.3);
+    }
+    .lightbox .close-area {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      cursor: pointer;
+    }
+    .lightbox img {
+      position: relative;
+      z-index: 1001;
     }
   </style>
 </head>
@@ -131,30 +189,67 @@
 
 </section>
 
-<section class="publications">
-  <h2>More about me</h2>
-
-  <div class="pub-item">
-    <img src="publication1_thumbnail.jpg" alt="Publication 1" />
-    <div class="pub-text">
-      <p><strong>Title of Publication 1</strong><br />
-      Two-line description of the publication, highlighting its contribution or findings.</p>
-      <a href="https://link_to_publication_1.com" target="_blank">Read Publication</a>
-    </div>
+<section class="gallery-section">
+  <h2>Gallery</h2>
+  <p>Click on any image to view it in full size.</p>
+  <div class="thumb-grid">
+    <img src="research_project.png" alt="Research Project" data-full="research_project.png" />
+    <img src="bot_crib.png" alt="Bot Crib" data-full="bot_crib.png" />
   </div>
-
-  <div class="pub-item">
-    <img src="publication2_thumbnail.jpg" alt="Publication 2" />
-    <div class="pub-text">
-      <p><strong>Title of Publication 2</strong><br />
-      Two-line description of the publication.</p>
-      <a href="https://link_to_publication_2.com" target="_blank">Read Publication</a>
-    </div>
-  </div>
-
 </section>
 
+<!-- Lightbox -->
+<div class="lightbox" id="lightbox">
+  <span class="close-area" id="lightbox-close"></span>
+  <img id="lightbox-img" src="" />
+</div>
 
+<script>
+  const lightbox = document.getElementById('lightbox');
+  const lightboxImg = document.getElementById('lightbox-img');
+  const closeArea = document.getElementById('lightbox-close');
 
+  // Open lightbox when clicking on gallery thumbnails
+  const thumbs = document.querySelectorAll('.thumb-grid img');
+  thumbs.forEach(img => {
+    img.addEventListener('click', () => {
+      lightboxImg.src = img.dataset.full || img.src;
+      lightbox.style.display = 'flex';
+    });
+  });
+
+  // Open lightbox when clicking on publication images
+  const pubImages = document.querySelectorAll('.pub-item img');
+  pubImages.forEach(img => {
+    img.style.cursor = 'pointer';
+    img.addEventListener('click', () => {
+      lightboxImg.src = img.src;
+      lightbox.style.display = 'flex';
+    });
+  });
+
+  // Close lightbox when clicking on the close area (background)
+  closeArea.addEventListener('click', () => {
+    lightbox.style.display = 'none';
+    lightboxImg.src = '';
+  });
+
+  // Close lightbox when pressing Escape key
+  document.addEventListener('keydown', (e) => {
+    if (e.key === 'Escape' && lightbox.style.display === 'flex') {
+      lightbox.style.display = 'none';
+      lightboxImg.src = '';
+    }
+  });
+
+  // Prevent closing when clicking on the image itself
+  lightboxImg.addEventListener('click', (e) => {
+    e.stopPropagation();
+  });
+</script>
 </body>
 </html>
+
+
+
+
