--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
         <div class="contact">montone.guglielmo@gmail.com</div>
         <nav aria-label="Primary">
           <a href="CvMontoneGuglielmo2025.pdf" target="_blank">CV</a>
-          <a href="https://scholar.google.com" target="_blank">Google Scholar</a>
-          <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>
+          <a href="https://scholar.google.com/citations?user=kD51fXUAAAAJ&hl=en&authuser=2&oi=sra" target="_blank">Google Scholar</a>
+          <a href="https://www.linkedin.com/in/guglielmo-montone-5369aa162/" target="_blank">LinkedIn</a>
         </nav>
       </div>
       <img class="profile" src="guglielmo_picture.jpg" alt="Portrait of Guglielmo Montone">
